<resources>
    <string name="app_name">The App</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="account">Account</string>
    <string name="account_preferences">Account Preferences</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="close_profile">Close Profile</string>
    <string name="display_name">Display Name</string>
    <string name="username">username</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="friends_fragment_label">Friends</string>
    <string name="create_fragment_label">Create</string>
    <string name="leaderboard_fragment_label">Leaderboard</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- strings for statistics -->
    <string name="statistics">Statistics</string>
    <string name="recent_progress">Recent Progress</string>
    <string name="attempts">Attempts</string>
    <string name="percentage">Percentage</string>
    <string name="total_progress">Total Progress</string>
    <string name="recent_guesses">Recent Guesses</string>
    <string name="actual_percent">72.13</string>
    <string name="win_percent">Win Percent</string>
    <string name="temp_max_streak">36</string>
    <string name="max_streak">Max Streak</string>
    <string name="streak">24</string>
    <string name="current_streak">Current Streak</string>
    <string name="points_earned">Points Earned</string>
    <string name="rank_stat">Rank</string>
    <string name="global_ranking">Global Ranking:</string>

    <!-- strings for leaderboard -->
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="points">Points</string>

    <!-- placeholder strings for post preview-->
    <string name="default_op_clue">OP clue here</string>
    <string name="default_op_rating">OP rating here</string>
    <string name="default_op_name">OP name here</string>

    <!-- strings for edittext fields -->
    <string name="edit_game">Write your game here</string>
    <string name="edit_clue">Write your clue here</string>
    <string name="edit_rating">Write your rating here</string>
    <string name="post_button">Post</string>

    <!-- strings for login and account creation tabs -->
    <string name="login_ue">Username or Email</string>
    <string name="login_password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="create_username">Username</string>
    <string name="create_email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>

    <!-- strings for post interaction -->
    <string name="destination_label">{destination}</string>
    <string name="reply_answer">Reply Answer</string>
    <string name="reply_comment">Reply Comment</string>
    <string name="reply_username">Reply User</string>
    <string name="write_a_reply">Write a reply…</string>
    <string name="write_answer">Write an Answer…</string>
    <string name="write_comment">Write a Comment…</string>
    <string name="add_friend">Add friend</string>
    <string name="request_sent">Friend request sent!</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string-array name="font_size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

</resources>