<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/loginLayout">

    <EditText
        android:id="@+id/signupUser"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:padding="8dp"
        android:layout_marginTop="60dp"
        android:inputType="text"
        android:hint="@string/create_username"/>

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:padding="8dp"
        android:layout_marginVertical="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/create_email"/>

    <EditText
        android:id="@+id/signupPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:padding="8dp"
        android:inputType="textPassword"
        android:hint="@string/login_password"/>

    <EditText
        android:id="@+id/passConfirm"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:padding="8dp"
        android:layout_marginVertical="16dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/white"
        app:backgroundTint="#734F96"
        android:text="@string/sign_up"/>

</LinearLayout>