<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/loginLayout">

    <EditText
        android:id="@+id/loginUE"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/edittext_bg"
        android:padding="8dp"
        android:inputType="text"
        android:hint="@string/login_ue"/>

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_bg"
        android:padding="8dp"
        android:layout_marginVertical="16dp"
        android:inputType="textPassword"
        android:hint="@string/login_password"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/white"
        app:backgroundTint="#734F96"
        android:text="@string/log_in"/>

</LinearLayout>