<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_view"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".StatisticsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/total_progress_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/total_progress"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_below="@id/total_progress_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/username"
            android:textSize="24sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/rankCard"
            android:layout_below="@id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/card_color"
            app:strokeColor="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rank_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/global_ranking"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/rank_text"
                    android:paddingStart="0dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/rank_stat"
                    android:textSize="20sp" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_below="@id/rankCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/card_color"
            app:strokeColor="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_points_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/points_earned"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/pointsCard"
                    android:layout_below="@id/total_points_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/total_points_text"
                    android:layout_alignEnd="@id/total_points_text"
                    android:background="@color/nav_view"
                    app:strokeColor="@android:color/transparent">

                    <TextView
                        android:id="@+id/total_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/points"
                        android:textSize="20sp" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/recent_streak_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="10dp"
                    android:text="@string/current_streak"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recentStreakCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/recent_streak_text"
                    android:layout_alignStart="@id/recent_streak_text"
                    android:layout_alignEnd="@id/recent_streak_text"
                    android:background="@color/nav_view"
                    app:strokeColor="@android:color/transparent">

                    <TextView
                        android:id="@+id/recent_streak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/streak"
                        android:textSize="20sp" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/winPercentText"
                    android:layout_below="@id/pointsCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/total_points_text"
                    android:layout_alignEnd="@id/total_points_text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:textAlignment="center"
                    android:text="@string/win_percent"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/winPercentCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/winPercentText"
                    android:layout_alignStart="@id/pointsCard"
                    android:layout_alignEnd="@id/pointsCard"
                    android:layout_marginBottom="16dp"
                    android:background="@color/nav_view"
                    app:strokeColor="@android:color/transparent">

                    <TextView
                        android:id="@+id/winPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/actual_percent"
                        android:textSize="20sp" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/maxStreakText"
                    android:layout_below="@id/recentStreakCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@id/recent_streak_text"
                    android:layout_alignEnd="@id/recent_streak_text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="16dp"
                    android:textAlignment="center"
                    android:text="@string/max_streak"
                    android:textSize="16sp" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/maxStreakCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/maxStreakText"
                    android:layout_alignStart="@id/recentStreakCard"
                    android:layout_alignEnd="@id/recentStreakCard"
                    android:layout_marginBottom="16dp"
                    android:background="@color/nav_view"
                    app:strokeColor="@android:color/transparent">

                    <TextView
                        android:id="@+id/maxStreak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/temp_max_streak"
                        android:textSize="20sp" />

                </com.google.android.material.card.MaterialCardView>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</LinearLayout>