<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LeaderboardFragment">

    <TextView
        android:id="@+id/leaderboard_rank_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rank"
        android:textSize="@dimen/font_very_small"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/leaderboard_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/name"
        android:textSize="@dimen/font_very_small"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/leaderboard_rank_text"
        app:layout_constraintHorizontal_weight="2"/>

    <TextView
        android:id="@+id/leaderboard_points_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="@dimen/font_very_small"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

    <ListView
        android:id="@+id/leaderboard_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:dividerHeight="2dp"
        android:paddingBottom="110dp"
        android:divider="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/leaderboard_rank_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>