<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/accountPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/account_preferences"
        android:textSize="@dimen/font_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_button_arrow"
        app:layout_constraintEnd_toEndOf="@id/accountPreferences"
        app:layout_constraintTop_toTopOf="@id/accountPreferences"
        app:layout_constraintBottom_toBottomOf="@id/accountPreferences"/>

    <TextView
        android:id="@+id/darkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountPreferences"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/dark_mode"
        android:textSize="@dimen/font_medium"
        app:layout_constraintTop_toBottomOf="@id/accountPreferences"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountPreferences"
        android:layout_alignEnd="@id/accountPreferences"
        app:layout_constraintEnd_toEndOf="@id/darkMode"
        app:layout_constraintTop_toTopOf="@id/darkMode"
        app:trackTint="@color/primary" />

    <TextView
        android:id="@+id/fontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/darkMode"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/font_size"
        android:textSize="@dimen/font_medium"
        app:layout_constraintTop_toBottomOf="@id/darkMode"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/fontSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/darkMode"
        android:layout_alignEnd="@id/accountPreferences"
        android:gravity="center"
        android:padding="13dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@id/fontSize"
        app:layout_constraintTop_toTopOf="@id/fontSize"/>

</androidx.constraintlayout.widget.ConstraintLayout>